# langgraph_chatbot_workflow

./: .gitignore  pyproject.toml  temp_test_multimodal.py
app/: main.py
app/branches/: chat.py  default.py  task.py
app/db/: __init__.py
app/graph/: router.py
app/history/: __init__.py  base.py  models.py  mysql_store.py  token_counter.py  utils.py
app/intent/: bert.py  keyword.py  llm.py  recognize.py
app/intent/types/: __init__.py  enums.py  result.py
app/llm/: __init__.py  base.py  qlora_manager.py
app/llm/providers/: anthropic.py  ollama.py  openai.py  proxy.py  unsloth.py
app/prompt/: __init__.py
app/rag/: __init__.py
app/tts/: __init__.py  base.py
app/tts/providers/: edge.py  elevenlabs.py  openai.py  piper.py  qwen3.py  silero.py
config/: __init__.py  config.example.json  config.json
prompts/: chat.txt  default.txt  task.txt
