[project]
name = "ai-chat-system"
version = "0.1.0"
description = "AI Chat System with LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "torch>=2.10.0",
    "transformers>=4.57.3",
    "aiomysql>=0.2.0",
]

[project.optional-dependencies]
llm-unsloth = [
    "transformers>=5.3.0",
    "unsloth>=2026.3.0",
    "unsloth_zoo>=2026.3.0",
    "xformers==0.0.35",
    "torchao>=0.13.0",
    "bitsandbytes>=0.45.5",
    "diffusers",
    "nest-asyncio",
    "torchvision>=0.25.0",
    "triton-windows",
    "typer",
]
tts-edge = ["edge-tts>=6.1.0"]
tts-elevenlabs = ["elevenlabs>=1.0.0"]
tts-piper = ["piper-tts"]
tts-silero = ["silero-tts"]
llm-openai = ["openai"]
llm-anthropic = ["anthropic"]
llm-ollama = ["ollama"]
all = [
    "edge-tts>=6.1.0",
    "elevenlabs>=1.0.0",
    "openai",
    "anthropic",
    "ollama",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[tool.uv.extra-build-dependencies]
xformers = ["torch"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
